# ProstheticArm

./: README.md  Sahana_Ses_003-epo.fif  lda_model.pkl  scaler.pkl
test-implementation/pipeline/: .gitignore  README.md  pyproject.toml  requirements.txt
test-implementation/pipeline/arduino/grasp_controller/: grasp_controller.ino
test-implementation/pipeline/configs/: data.yaml  deployment.yaml  features.yaml  model.yaml  preprocessing.yaml  task.yaml
test-implementation/pipeline/derivatives/bci-grasp-vs-rest/: dataset_description.json
test-implementation/pipeline/models/: README.md
test-implementation/pipeline/notebooks/: README.md
test-implementation/pipeline/scripts/: 01_preprocess.py  02_train.py  03_evaluate.py  04_run_realtime.py  run_task.py  test_arduino_gui.py
test-implementation/pipeline/src/bci_grasp/: __init__.py  config.py
test-implementation/pipeline/src/bci_grasp/artifacts/: __init__.py  reject.py
test-implementation/pipeline/src/bci_grasp/data/: __init__.py  bids_loader.py  channel_select.py
test-implementation/pipeline/src/bci_grasp/deployment/: __init__.py  arduino_serial.py  protocol.py
test-implementation/pipeline/src/bci_grasp/evaluation/: __init__.py  cv.py  metrics.py
test-implementation/pipeline/src/bci_grasp/features/: __init__.py  bandpower.py  csp.py
test-implementation/pipeline/src/bci_grasp/models/: __init__.py  base.py  lda_pipeline.py
test-implementation/pipeline/tests/: test_arduino_serial.py  test_bids_loader.py  test_config.py  test_features.py  test_preprocessing.py  test_protocol.py
(+39 files in other folders)
